den1-k8s01/warehouse20/organizr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: organizr
  name: organizr
  namespace: warehouse20
spec:
  selector:
    matchLabels:
      app: organizr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: organizr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: organizr
        image: organizrtools/organizr-v2:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: organizr-data
