den1-k8s01/warehouse20/organizr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: organizr
  namespace: warehouse20
  labels:
    app: organizr
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
  selector:
    app: organizr
