den1-k8s01/warehouse20/organizr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app: organizr
  name: organizr
  namespace: warehouse20
spec:
  rules:
  - host: warehouse20.com
    http:
      paths:
      - backend:
          serviceName: organizr
          servicePort: http
  - host: www.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: organizr
          servicePort: http
  tls:
  - hosts:
    - warehouse20.com
    - "*.warehouse20.com"
    secretName: w20-tls
