den1-k8s01/warehouse20/organizr/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: organizr
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: organizr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: ingress-public
    ports:
    - protocol: TCP
      port: http
